Refs #57864 fix quote missing padding

--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -19,7 +19,8 @@
     .col-lg-10,
     .col-lg-11,
     .col-lg-12 {
-      padding: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 }
